--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "monolog/monolog": "^1.24",
         "ext-json": "*",
         "ext-curl": "*",
-        "user890104/rcon-client": "v0.1.1"
+        "user890104/rcon-client": "dev-master"
     },
     "authors": [
         {
